--- a/style.css
+++ b/style.css
@@ -57,4 +57,25 @@ button{
   width: 500px;
   height: 150px;
   border-radius: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.box {
+  width: 150px;
+  height: 100px;
+  background-color: black;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.box h1{
+  color: white;
+}
+.box p {
+  color: rgb(196, 190, 190);
 }
