--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body{
  display: flex;
  flex-direction: column;
  align-items: center;
- padding: 50px;
+ /* padding: 50px; */
+ justify-content: center;
  gap: 30px;
 }
 
